Add FXML de l'arrière plan + Restructuration projet